<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">RDemo</string>
    <string name="registry_nickname" tools:ignore="MissingTranslation">Nickname</string>
    <string name="registry_phone" tools:ignore="MissingTranslation">Phone</string>
    <string name="registry_code" tools:ignore="MissingTranslation">Code</string>
    <string name="registry_password" tools:ignore="MissingTranslation">Password</string>
    <string name="registry_btn" tools:ignore="MissingTranslation">Registry</string>
    <string name="registry_request_code" tools:ignore="MissingTranslation">Request Code</string>
    <string name="registry_code_has_send" tools:ignore="MissingTranslation">Code has sent, check it please !</string>
    <string name="registry_go_to_login" tools:ignore="MissingTranslation">Have a account login now</string>
    <string name="registry_nickname_empty" tools:ignore="MissingTranslation">Nickname can not be empty</string>
    <string name="registry_code_empty" tools:ignore="MissingTranslation">Verification code can not be empty</string>

    <string name="login_btn" tools:ignore="MissingTranslation">Login</string>
    <string name="login_go_to_registry" tools:ignore="MissingTranslation">Registry now</string>
    <string name="login_phone_empty" tools:ignore="MissingTranslation">Phone can not be empty !</string>
    <string name="login_password_empty" tools:ignore="MissingTranslation">Password can not be empty !</string>
    <string name="title_activity_conver_list">ConverListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">test chat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="operation_test_chat_by_drawer">Click drawer menu item to test chat</string>
    <string name="begin_text">Begin</string>
</resources>
